Fix alignment issue

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -432,8 +432,8 @@
 }
 
 .user-profile-image img{
-  width: 66px;
-  height: 66px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
 }
 
